--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorMff">#74D7FF</color>
     <color name="colorMffEmblem">#0091D2</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
